<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fourthColor"
    tools:context=".HomeActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout3"
        android:layout_width="0dp"
        android:layout_height="180dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="1dp"
        android:background="@drawable/ic_home_header_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/searchCatchPokemon_txt"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="20dp"
            android:autofillHints=""
            android:background="@drawable/ic_input_text_background"
            android:ems="10"
            android:hint="@string/home_searchCatchPokemon_txt"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"
            android:textColor="@color/thirdColor"
            android:textColorHighlight="@color/thirdColor"
            android:textColorHint="@color/thirdColor"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="TextContrastCheck" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="16dp"
            android:orientation="horizontal"
            android:paddingLeft="60dp"
            android:paddingRight="60dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/searchCatchPokemon_txt">

            <Button
                android:id="@+id/watchPokemon_button"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="5dp"
                android:layout_height="48dp"
                android:layout_marginEnd="10dp"
                android:layout_weight="1"
                android:background="@drawable/ic_home_header_button_background"
                android:onClick="watchDetailsClicked"
                android:text="@string/home_watchPokemon_button"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/catchPokemon_button"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="5dp"
                android:layout_height="48dp"
                android:layout_marginStart="10dp"
                android:layout_weight="1"
                android:background="@drawable/ic_home_header_button_background"
                android:onClick="catchPokemonClicked"
                android:text="@string/home_catchPokemon_button"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold" />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:text="@string/home_mainMessage_label"
        android:textColor="@color/white"
        android:textSize="32sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout3" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/pokemonRecyclerview"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/searchPokemon_button" />

    <EditText
        android:id="@+id/searchPokemon_txt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="20dp"
        android:autofillHints=""
        android:background="@drawable/ic_input_text_background"
        android:ems="10"
        android:hint="@string/home_searchPokemon_txt"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:textColor="@color/thirdColor"
        android:textColorHighlight="@color/thirdColor"
        android:textColorHint="@color/thirdColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <Button
        android:id="@+id/searchPokemon_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="50dp"
        android:background="@drawable/ic_login_button_background"
        android:onClick="searchPokemonClicked"
        android:text="@string/home_searchPokemon_button"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/showAllPokemon_button"
        app:layout_constraintTop_toBottomOf="@+id/searchPokemon_txt" />

    <Button
        android:id="@+id/showAllPokemon_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="15dp"
        android:background="@drawable/ic_login_button_background"
        android:onClick="showAllPokemonClicked"
        android:text="@string/home_showAllPokemon_button"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/searchPokemon_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/searchPokemon_txt" />

</androidx.constraintlayout.widget.ConstraintLayout>