<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#DFDFDF"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/loginHeader"
        android:layout_width="0dp"
        android:layout_height="200dp"
        android:background="@color/home_header_primaryColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:text="@string/app_name"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="48sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="150dp"
            android:background="@drawable/ic_pokebola"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.157"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginTop="32dp"
            android:background="@drawable/ic_pokebola"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.862"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/loginHeader_2"
        android:layout_width="0dp"
        android:layout_height="150dp"
        android:background="@drawable/ic_login_header_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginHeader">

        <View
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginStart="65dp"
            android:layout_marginEnd="276dp"
            android:background="@drawable/ic_pokebola"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/textView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:text="@string/login_welcomeMessage"
        android:textAlignment="center"
        android:textColor="@color/thirdColor"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginHeader_2" />

    <EditText
        android:id="@+id/login_username_txt"
        android:layout_width="350dp"
        android:layout_height="0dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/ic_input_text_background"
        android:ems="10"
        android:hint="@string/login_username_txt"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:textColorHighlight="@color/thirdColor"
        android:textColorHint="@color/thirdColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        tools:ignore="SpeakableTextPresentCheck"
        android:autofillHints="" />

    <Button
        android:id="@+id/loing_button"
        android:layout_width="200dp"
        android:layout_height="0dp"
        android:layout_marginTop="72dp"
        android:background="@drawable/ic_login_button_background"
        android:onClick="loginClicked"
        android:text="@string/login_button"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_username_txt" />

</androidx.constraintlayout.widget.ConstraintLayout>